--- a/settings.json
+++ b/settings.json
@@ -5,7 +5,7 @@
   "editor.bracketPairColorization.enabled": true,
   "editor.fontLigatures": false,
   "editor.fontFamily": "Hack Nerd Font",
-  "editor.fontSize": 14,
+  "editor.fontSize": 13,
   "editor.fontWeight": "normal",
   "editor.tabSize": 4,
   "editor.tabCompletion": "off",
@@ -148,6 +148,11 @@
   "[javascriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "[css]": {
+    "editor.defaultFormatter": "vscode.css-language-features"
+  },
+  "editor.guides.bracketPairs": "active",
+  "editor.linkedEditing": true,
   // "[html]": {
   //   "editor.tabSize": 2
   // }
