--- a/settings.json
+++ b/settings.json
@@ -40,7 +40,8 @@
   "git.autofetch": true,
   "[python]": {
     "editor.formatOnType": true,
-    "editor.defaultFormatter": "ms-python.python"
+    // "editor.defaultFormatter": "ms-python.python"
+    "editor.defaultFormatter": "ms-python.autopep8"
   },
   "workbench.editorAssociations": {
     "*.lnk": "sqlite-viewer.option",
@@ -128,17 +129,18 @@
   "editor.inlineSuggest.enabled": true,
   "liveServer.settings.donotShowInfoMsg": true,
   "github.copilot.enable": {
-    "*": false,
+    "*": true,
     "plaintext": false,
     "markdown": false,
     "scminput": false
   },
   "markdown-preview-enhanced.previewTheme": "github-dark.css",
   "settingsSync.ignoredExtensions": [
-    "vscode.theme-quietlight"
+    "vscode.theme-quietlight",
+    "vscode.theme-monokai-dimmed"
   ],
   //  configuracion de la terminal del Vscode
-  "workbench.colorTheme": "Gruvbox Material Dark",
+  "workbench.colorTheme": "Gruvbox ish Dark Medium",
   "terminal.integrated.fontFamily": "Hack NF",
   "terminal.integrated.fontSize": 13,
   "terminal.integrated.fontWeight": "normal",
@@ -153,6 +155,15 @@
   },
   "editor.guides.bracketPairs": "active",
   "editor.linkedEditing": true,
+  "[django-html]": {
+    "editor.quickSuggestions": {
+      "other": true,
+      "comments": true,
+      "strings": true
+    }
+  },
+  // para visualizar barra de extenciones
+  // "workbench.activityBar.visible": false,
   // "[html]": {
   //   "editor.tabSize": 2
   // }
