--- a/settings.json
+++ b/settings.json
@@ -4,8 +4,8 @@
   // Editor
   "editor.bracketPairColorization.enabled": true,
   "editor.fontLigatures": false,
-  "editor.fontFamily": "Hack Nerd Font",
-  "editor.fontSize": 14,
+  "editor.fontFamily": "Hack Nerd Font, Hack NF",
+  "editor.fontSize": 13,
   "editor.fontWeight": "normal",
   "editor.tabSize": 1,
   "editor.tabCompletion": "off",
@@ -134,6 +134,6 @@
   //  configuracion de la terminal del Vscode
   "workbench.colorTheme": "Gruvbox Material Dark",
   "terminal.integrated.fontFamily": "Hack NF",
-  "terminal.integrated.fontSize": 13,
+  "terminal.integrated.fontSize": 12,
   "terminal.integrated.fontWeight": "normal"
 }
