--- a/settings.json
+++ b/settings.json
@@ -73,7 +73,10 @@
   },
   //Detectar HTML en una cadena de Javascript
   "emmet.syntaxProfiles": {
-    "javascript": "html"
+    "javascript": [
+      "html",
+      "jsx"
+    ]
   },
   "emmet.includeLanguages": {
     "javascript": "html"
@@ -129,7 +132,7 @@
   "editor.inlineSuggest.enabled": true,
   "liveServer.settings.donotShowInfoMsg": true,
   "github.copilot.enable": {
-    "*": true,
+    "*": false,
     "plaintext": false,
     "markdown": false,
     "scminput": false
